--- a/vignettes/climate-data.Rmd
+++ b/vignettes/climate-data.Rmd
@@ -28,6 +28,7 @@ studyAreaBC <- terra::vect(cbind(-122.14, 52.14), crs = "epsg:4326") |>
                        "+x_0=0 +y_0=0 +units=m +no_defs +ellps=GRS80 +towgs84=0,0,0")) |>
   SpaDES.tools::randomStudyArea(seed = 60, size = 1e10) |>
   scfmutils::prepInputsFireRegimePolys(studyArea = _, type = "FRT")
+## TODO: subsetType = "intersects"
 
 plot(studyAreaBC["FRT"])
 ```
